--- a/Lucilvio.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Lucilvio.Blog.Web/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li> <a href="@Url.Action("Cadastrar", "Post")"> Novo Post </a> </li>
                 </ul>
             </div>
         </div>
@@ -28,9 +29,9 @@
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
+        <br/>
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Lucilvio.Blog - Todos os direitos reservados </p>
         </footer>
     </div>
 
