--- a/Lucilvio.Blog.Web/Views/Post/Cadastrar.cshtml
+++ b/Lucilvio.Blog.Web/Views/Post/Cadastrar.cshtml
@@ -11,8 +11,8 @@
     </div>
 
     <div class="form-group">
-        <label class="control-label"> Texto </label>
-        <textarea class="form-control" name="Texto"> </textarea>
+        <label class="control-label"> Conteúdo </label>
+        <textarea class="form-control" name="Conteudo"> </textarea>
     </div>
 
     <button class="btn btn-primary"> Cadastrar </button>
