--- a/Lucilvio.Blog.Web/Views/Home/Index.cshtml
+++ b/Lucilvio.Blog.Web/Views/Home/Index.cshtml
@@ -6,18 +6,80 @@
 
 @foreach (var post in Model)
 {
-    <div class="row">
-        <div class="col-lg-12">
-            <div style="height: 70px;">
-                <h3 class="pull-left"> @post.Titulo </h3>
-                <a style="margin-top: 25px; margin-left: 20px" class="pull-left" href="@Url.Action("Editar", "Post", new { post.Id })"> <i class="glyphicon glyphicon-pencil"> </i> </a>
+    <div class="post">
+        <div class="row">
+            <div class="col-lg-12">
+                <div style="height: 70px;">
+                    <input type="hidden" id="idDoPost" value="@post.Id" />
+                    <h3 class="pull-left"> @post.Titulo </h3>
+                    <a style="margin-top: 25px; margin-left: 20px" class="pull-left" href="@Url.Action("Editar", "Post", new { post.Id })"> <i class="glyphicon glyphicon-pencil"> </i> </a>
+                </div>
+                <div>
+                    <p> @post.Conteudo </p>
+                    <span style="font-size: x-small"> <i class="glyphicon glyphicon-time"></i> @post.DataDoCadastro </span>
+                </div>
             </div>
-            <div >
-                <p> @post.Conteudo </p>
-                <span style="font-size: x-small"> <i class="glyphicon glyphicon-time"></i> @post.DataDoCadastro </span>
+        </div>
+        <hr />
+        <div class="row">
+            <div class="col-lg-12">
+                <h5> Comentários </h5>
+
+                <form id="formulario-de-comentario">
+                    <div class="form-inline">
+                        <input type="text" class="form-control input-sm" name="comentario" id="comentario" required placeholder="Deixe seu comentário..." />
+                        <input type="button" value="Comentar" class="adicionar-comentario" />
+                    </div>
+                </form>
             </div>
+            <ul id="lista-de-comentarios">
+                @foreach (var comentario in post.Comentarios)
+                {
+                    <li style='font-size: small'> @comentario.Conteudo <span style="font-size: x-small"> <i class="glyphicon glyphicon-time"></i> @comentario.Data </span> </li>
+                }
+            </ul>
         </div>
     </div>
     <hr />
 }
 
+@section scripts {
+
+    <script>
+        $(document).ready(function () {
+            $('form').validate({
+                errorPlacement: function (error, element) {
+                    return true;
+                }
+            });
+
+            $(".adicionar-comentario").on("click", function () {
+                var post = $(this).parents("div[class='post']");
+
+                if (!post.find("#formulario-de-comentario").valid()) {
+                    return;
+                }
+
+                var idDoPost = post.find("#idDoPost").val();
+                var comentario = post.find("#comentario");
+                var listaDeComentarios = post.find("#lista-de-comentarios");
+                var botaoComentar = $(this);
+
+                $.ajax({
+                    url:  '@Url.Action("Comentar", "Post")',
+                    data: { idDoPost, conteudo: $(comentario).val() },
+                    type: "POST",
+                    beforeSend: function() {
+                        botaoComentar.attr("disabled", "disabled");
+                    },
+                    success: function (retorno) {
+                        $(comentario).val("");
+                        botaoComentar.removeAttr("disabled");
+                        $(listaDeComentarios).append("<li style='font-size: small'>" + retorno.comentario + "<span style='font-size: x-small'> <i class='glyphicon glyphicon-time'></i> "
+                            + retorno.data + " </span> </li>");
+                    }
+                });
+            });
+        });
+    </script>
+}
