Implementação da exibição de quantidade de comentários por post na lista. #7

--- a/Lucilvio.Blog.Web/Views/Home/Index.cshtml
+++ b/Lucilvio.Blog.Web/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
                 </div>
                 <div>
                     <p> @post.ConteudoResumido </p>
-                    <span style="font-size: x-small"> <i class="glyphicon glyphicon-time"></i> @post.DataDoCadastro </span>
+                    <span style="font-size: x-small"> <i class="glyphicon glyphicon-time"></i> @post.DataDoCadastro </span> &nbsp; <span style="font-size: x-small"> <i class="glyphicon glyphicon-comment"></i> @post.QuantidadeDePosts </span>
                 </div>
             </div>
         </div>
