Implementação da gestão de usuários para autenticação no blog #9

--- a/Lucilvio.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Lucilvio.Blog.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li> <a href="@Url.Action("Cadastrar", "Post")"> Novo Post </a> </li>
+                        <li> <a href="@Url.Action("Gerenciar", "Usuario")"> Gerenciar Usuários </a> </li>
                     }
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
