--- a/Lucilvio.Blog.Web/Views/Home/Index.cshtml
+++ b/Lucilvio.Blog.Web/Views/Home/Index.cshtml
@@ -19,7 +19,10 @@
                 </div>
                 <div>
                     <p> @post.Conteudo </p>
-                    <span style="font-size: x-small"> <i class="glyphicon glyphicon-time"></i> @post.DataDoCadastro </span> &nbsp; <span style="font-size: x-small"> <i class="glyphicon glyphicon-comment"></i> @post.QuantidadeDePosts </span>
+
+                    <span style="font-size: x-small"> <i class="glyphicon glyphicon-time"></i> @post.DataDoCadastro </span> &nbsp;
+                    <span style="font-size: x-small"> <i class="glyphicon glyphicon-comment"></i> @post.QuantidadeDeComentarios </span> &nbsp;
+                    <span style="font-size: x-small"> <i class="glyphicon glyphicon-user"></i> @post.NomeDoAutor </span>
                 </div>
             </div>
         </div>
