--- a/Lucilvio.Blog.Web/Views/Post/Ver.cshtml
+++ b/Lucilvio.Blog.Web/Views/Post/Ver.cshtml
@@ -12,7 +12,8 @@
             </div>
             <div>
                 <p> @Model.Conteudo </p>
-                <span style="font-size: x-small"> <i class="glyphicon glyphicon-time"></i> @Model.DataDoCadastro </span>
+                <span style="font-size: x-small"> <i class="glyphicon glyphicon-time"></i> @Model.DataDoCadastro </span> &nbsp;
+                <span style="font-size: x-small"> <i class="glyphicon glyphicon-user"></i> @Model.NomeDoAutor </span>
             </div>
         </div>
     </div>
