Criada a área de gerencia de posts #12

--- a/Lucilvio.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Lucilvio.Blog.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 <ul class="nav navbar-nav">
                     @if (User.Identity.IsAuthenticated)
                     {
-                        <li> <a href="@Url.Action("Cadastrar", "Post")"> Novo Post </a> </li>
+                        <li> <a href="@Url.Action("MeusPosts", "Post")"> Meus Posts </a> </li>
                         <li> <a href="@Url.Action("Gerenciar", "Usuario")"> Gerenciar Usuários </a> </li>
                     }
                 </ul>
