--- a/Lucilvio.Blog.Web/Views/Usuario/Cadastrar.cshtml
+++ b/Lucilvio.Blog.Web/Views/Usuario/Cadastrar.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ModeloDeUsuario
 @{
     ViewBag.Title = "Cadastrar";
 }
@@ -19,6 +19,10 @@
             <div class="form-group">
                 <label class="control-label"> Confirmacação da Senha </label>
                 <input type="password" name="ConfirmacaoDaSenha" class="form-control" required />
+            </div>
+            <div class="form-group">
+                <label class="control-label"> Administrador? </label>
+                @Html.CheckBoxFor(u => u.EhAdministrador)
             </div>
             
             <button class="btn btn-primary" type="submit"> Cadastrar </button>
