--- a/Lucilvio.Blog.Web/Views/Usuario/Editar.cshtml
+++ b/Lucilvio.Blog.Web/Views/Usuario/Editar.cshtml
@@ -21,8 +21,12 @@
                 <input type="password" name="ConfirmacaoDaSenha" class="form-control" required />
             </div>
             <div class="form-group">
-                <label class="control-label"> Pode se autenticar </label>
+                <label class="control-label"> Pode se autenticar? </label>
                 @Html.CheckBoxFor(u => u.PodeSeAutenticar)
+            </div>
+            <div class="form-group">
+                <label class="control-label"> Administrador? </label>
+                @Html.CheckBoxFor(u => u.EhAdministrador)
             </div>
 
             <button class="btn btn-primary" type="submit"> Editar </button>
