--- a/Lucilvio.Blog.Web/Views/Post/Cadastrar.cshtml
+++ b/Lucilvio.Blog.Web/Views/Post/Cadastrar.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model ModeloDePost
+
+@{
     ViewBag.Title = "Cadastrar";
 }
 
@@ -13,6 +15,11 @@
     <div class="form-group">
         <label class="control-label"> Conteúdo </label>
         <textarea class="form-control" name="Conteudo"> </textarea>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label"> Permite Comentários? </label>
+        @Html.CheckBoxFor(p => p.PermiteComentarios, new { @checked = "checked" })
     </div>
 
     <button class="btn btn-primary"> Cadastrar </button>
