--- a/Lucilvio.Blog.Web/Views/Post/Editar.cshtml
+++ b/Lucilvio.Blog.Web/Views/Post/Editar.cshtml
@@ -1,4 +1,4 @@
-﻿@model ModeloDePost
+﻿@model ModeloDeEdicaoDePost
 @{
     ViewBag.Title = "Editar Post";
 }
@@ -21,6 +21,17 @@
     <div class="form-group">
         <label class="control-label"> Permite Comentários? </label>
         @Html.CheckBoxFor(p => p.PermiteComentarios)
+    </div>
+
+    <div class="form-group">
+        <label class="control-label"> Tags </label>
+        <br />
+        @for (int i = 0; i < Model.Tags.Tags.Count(); i++)
+        {
+            <input type="hidden" name='@("Tags.Tags[" + i + "].Id")' value="@Model.Tags.Tags[i].Id" />
+            <input type="hidden" name='@("Tags.Tags[" + i + "].Nome")' value="@Model.Tags.Tags[i].Nome" />
+            @Model.Tags.Tags[i].Nome @Html.CheckBox("Tags.Tags[" + i + "].Ativa", Model.Tags.Tags[i].Ativa)
+        }
     </div>
 
     <button class="btn btn-primary"> Editar </button>
