--- a/Lucilvio.Blog.Web/Views/Home/Index.cshtml
+++ b/Lucilvio.Blog.Web/Views/Home/Index.cshtml
@@ -11,17 +11,28 @@
             <div class="col-lg-12">
                 <div style="height: 70px;">
                     <input type="hidden" id="idDoPost" value="@post.Id" />
-                    <h3 class="pull-left"> @post.Titulo </h3>
+                    <h3 class="pull-left">
+                        @post.Titulo &nbsp;
+                        @foreach (var tag in post.Tags)
+                        {
+                            <span style="font-size: x-small; margin-right: 5px;" class="label label-default"> @tag </span>
+                        }
+                    </h3>
                 </div>
                 <div>
-                    <p> @post.Conteudo </p>
+                    <p>
+                        @post.Conteudo 
+                    </p>
 
                     <span style="font-size: x-small"> <i class="glyphicon glyphicon-time"></i> @post.DataDoCadastro </span> &nbsp;
                     <span style="font-size: x-small"> <i class="glyphicon glyphicon-comment"></i> @post.QuantidadeDeComentarios </span> &nbsp;
                     <span style="font-size: x-small"> <i class="glyphicon glyphicon-user"></i> @post.NomeDoAutor </span>
+
+
                 </div>
             </div>
         </div>
+        <br />
         <div class="row">
             <div class="col-lg-12">
                 <a href="@Url.Action("Ver", "Post", new { id = post.Id })"> Continuar lendo... </a>
